...
        app:shadow_color="@color/shadow"
        app:shadow_radius="20" />

    <!-- <a> Rounded corner imageview xml </a> -->

    <TextView
        android:id="@+id/summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
...
